Fix Bugzilla #273971 - Refactor AutoScale to reduce inner fields